--- a/Part3_CNNs.ipynb
+++ b/Part3_CNNs.ipynb
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,9 +956,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "**Your answer:**\n",
+       "\n",
+       "\n",
+       "1. Surprisingly, the best results were yielded by the most shallow network (L2).\n",
+       "This corresponds with with the fact that networks deeper than 4 layers were not trainable.\n",
+       "In larger depth our model could not learn.\n",
+       "\n",
+       "This is probably due to the large amount of max pooling layers. Any region not contributing to the maximum value,\n",
+       "Looses it's affect on the gradient.\n",
+       "\n",
+       "As there is a large number of such layer, it becomes very probable that values in the first layers of the network will\n",
+       "Loose their affect on the gradient and thus will not learn. Another factor that might harm is a form of vanishing gradient:\n",
+       "Though not as bad as in the case with the sigmoid function, dead ReLu's can also kill off gradients\n",
+       "(all negative values are set by zero). When the network is deep, this can cause the higher layers\n",
+       "to learn very slowly or as in our case- die off completely.\n",
+       "\n",
+       "Without addressing this problem, the more shallow networks have a bigger learning potential and thus yield better results.\n",
+       "\n",
+       "2. Yes, networks deeper than 4 did not learn.\n",
+       "   As said above this is due to to pooling layers or dead ReLus.\n",
+       "   Ways to address this problem is to use:\n",
+       "        1. Use dropout (or skip connections as in Res-Nets) to give all values a chance to affect the gradient.\n",
+       "        2. Use Leaky ReLu's to avoid killing non linearity.\n",
+       "            \n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_answer(hw3.answers.part3_q1)"
    ]
@@ -974,9 +1012,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "**Your answer:**\n",
+       "\n",
+       "\n",
+       "Test 1.2 yielded better results as we added more convolution filters which improved our feature extraction.\n",
+       "In this test the better preformance was yielded by the 4 layer network with the 256 conv filters.\n",
+       "The larger amount of filters added in two ways: it inhanced the feature extraction and since pooling layers don't affect\n",
+       "the channel dimension it made our network train a bit better in deeper architectures, but again the 8 layer network did\n",
+       "still could not learn.\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_answer(hw3.answers.part3_q2)"
    ]
@@ -992,9 +1052,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "**Your answer:**\n",
+       "\n",
+       "As the additional conv filters had effectively stretched the network, now the networks with 3 and 4 layers did not train.\n",
+       "Both the 1 and 2 layer networks yielded improved results over the networks in exp 1 and 2, which used only one\n",
+       "convolution depth over the entire network. The best results were yielded by the 2 layer deep network, as it had more\n",
+       "trainable filters than the shallower one. The improved results are probably due to the fact that the varying conv depth\n",
+       "improved the networks ability to learn more complicated patterns.  \n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_answer(hw3.answers.part3_q3)"
    ]
@@ -1011,9 +1092,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "**Your answer:**\n",
+       "\n",
+       "The changes we made to our model are:\n",
+       "    1. Adding dropout layers.\n",
+       "    2. Adding batch normalization layers.\n",
+       "    We also tried changing the activation function to Leaky-ReLu but it yielded less than optimal results.\n",
+       "    \n",
+       "\n",
+       "The first thing noticeable between our module and the previous ones is that it was able to train also deeper\n",
+       "networks thanks to the dropout layers which allowed gradient flow to the first layers.\n",
+       "\n",
+       "Secondly, the improved model learned much faster than previous ones and yielded better accuracy, the best configuration\n",
+       "was the four layer one maxing at about 85% test accuracy. We asses that again, dropout played a major role in this \n",
+       "improvement as it allowed more gradient flow and made the network classify using multiple features (as at any pass\n",
+       "some of the features may be dropped out). \n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_answer(hw3.answers.part3_q4)"
    ]
